# turboAPI

./: .bumpversion.cfg  .dockerignore  .gitignore  AGENTS.md  ASYNC_FINAL_ANALYSIS.md  ASYNC_OPTIMIZATION_COMPLETE.md  ASYNC_PERFORMANCE_STATUS.md  ASYNC_ROADMAP.md  ASYNC_TOKIO_SOLUTION.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  FASTAPI_COMPATIBILITY_ROADMAP.md  FASTAPI_FEATURE_COMPLETE.md  FASTAPI_FIXES_SUMMARY.md  FASTAPI_TYPE_SYSTEM_ANALYSIS.md  FINAL_ANSWER_PRODUCTION_SYNC_VS_ASYNC.md  MULTITHREADING_EXPERIMENT.md  Makefile  README.md  README_updated.md  ROADMAP.md  ROUTES.md  SATYA_0_4_0_BREAKING_CHANGES.md  SATYA_0_4_0_FINAL_STATUS.md  SATYA_0_4_0_FIXES_COMPLETE.md  SATYA_0_4_0_TEST_RESULTS.md  SATYA_IMPROVEMENT_PROPOSALS.md  SECURITY.md  SYNC_MULTITHREADING_RESULTS.md  V0.4.0_SUMMARY.md  advanced_example.py  benchmark_output.txt  brr.md  distribute.sh  docker-compose.yml  example_app.py  local_model_mlx_example.py  (+9 more)
.github/: pull_request_template.md
benches/: async_comparison_bench.py  performance_bench.rs  python_benchmark.py
benchmarks/: README.md  baseline.json  bench_cors_after_request.py  bench_fastapi_server.py  bench_json.py  (+19 more)
faster-boto3/: NATIVE_MIGRATION.md  build_accel.py  pyproject.toml
faster-boto3/benchmarks/: build_native_s3_handler.py  native_s3_bench.py  native_s3_best_path_policy.json  native_s3_cost_model.py  native_s3_handler.zig  native_s3_linear_opt.py  native_s3_path_map.py  turbo_vs_fast_s3.py
faster-boto3/faster_boto3/: __init__.py  _patch.py  native_s3.py  session.py
faster-boto3/tests/: test_native_s3.py  test_s3_parity.py
faster-boto3/zig/: build.zig
faster-boto3/zig/.zig-cache/o/19cbb396bedbbae7c870b21bd4796f5d/: libsigv4_accel.dylib
faster-boto3/zig/.zig-cache/o/204044b69542e3a33bc9df51658b39b6/: test
faster-boto3/zig/.zig-cache/o/9d755db74132d413146d2cf0842616e8/: cimport.zig
faster-boto3/zig/.zig-cache/o/a55505faa47236c11cf61d583a654ea9/: cimport.h.d
faster-boto3/zig/src/: http_client.zig  http_py.zig  main.zig  parser_py.zig
faster-redis/: build_accel.py  pyproject.toml
faster-redis/benchmarks/: redis_bench.py  redis_thread_bench.py
faster-redis/faster_redis/: __init__.py  _client.py  _parity.py  _patch.py  _shadow.py
faster-redis/tests/: test_client_fallback.py  test_native_shadow.py  test_parity_harness.py
faster-redis/zig/: build.zig
faster-redis/zig/.zig-cache/o/072511e14d3ce3fd52668808500f21a3/: libredis_accel.dylib
faster-redis/zig/.zig-cache/o/1ab4d4766e15271fffa17750bc3574cb/: libredis_accel.dylib
faster-redis/zig/.zig-cache/o/4b1eeea951924a27b8c122c040094745/: test
faster-redis/zig/.zig-cache/o/61626e2cf3df0b71820810077c2b693c/: cimport.h.d
faster-redis/zig/.zig-cache/o/93fb70526a3eaef94243db67402b5f02/: libredis_accel.dylib
faster-redis/zig/.zig-cache/o/9b4a4f7b4c94b8db75eb946812bcf60b/: libredis_accel.dylib
faster-redis/zig/.zig-cache/o/a5b359cb0ac619a1cc5d7a51fa37ebb3/: libredis_accel.dylib
faster-redis/zig/.zig-cache/o/c16e2a5d1e02552c8f0fc7a3888e2cb2/: cimport.zig
faster-redis/zig/.zig-cache/o/e739ae6ca7e98a81923872291caa41ea/: cimport.zig
faster-redis/zig/.zig-cache/o/faf60df67b3cfce14d19d72d2a75a608/: cimport.h.d
faster-redis/zig/src/: client.zig  main.zig  resp.zig
faster-redis/zig/zig-out/lib/: libredis_accel.dylib
(+382 files in other folders)
